--- a/index.html
+++ b/index.html
@@ -1,57 +1,254 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edson Gutierrez</title>
+    <meta name="Descripción" content="Está página es mi CV" />
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./Img/RoundedIcon.png">
+
+
+
 </head>
 
-<body>
-    <nav class="navbar bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Logo" width="30" height="24"
-                    class="d-inline-block align-text-top">
-                Bootstrap
-            </a>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="#">Features</a>
-                    <a class="nav-link" href="#">Pricing</a>
-                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+<body style="background-color: black">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+    <header>
+        <nav class="navbar navbar-expand-lg fixed-top" style="margin-top: -10px;">
+            <div class="container-fluid" style="background-color: #474747;">
+                <a class="navbar-brand" href="#">
+                    <img src="./Img/RoundedIcon.png" alt="Logo" width="50" height="Auto"
+                        class="d-inline-block align-text-top">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active text-light" aria-current="page" href="#">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="#About">Acerca de mí</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="#Experiencia">Experiencia</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-light" href="#Proyectos" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">Proyectos</a>
+                            <ul class="dropdown-menu bg-dark">
+                                <li><a class="dropdown-item text-light bg-dark" href="#dice-space">Dice Space</a></li>
+                                <li><a class="dropdown-item text-light bg-dark" href="#10-seconds">10 Seconds In The Moon</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="#Contacto">Contacto</a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <div class="container-fluid" style="margin-top: 20%;">
+
+        <div class="row">
+
+            <div class="col-lg-6 col-12 ">
+                <img src="./IMG/Edson.jpg" class="mx-auto d-block"  alt="Edson"
+                    height="Auto" width="60%">
+            </div>
+            <div class="col-lg-6 col-12 text-light text-lg-start text-center" style="margin-top: 100px;">
+                <h1 class="display-1">Edson Gutierrez</h1>
+                <p class="fs-3">Desarrollador De Videojuegos</p>
+                <a href="https://teseo723.itch.io"><img src="./Img/itchIcon.png" alt="Itch.io" height="50px"
+                        width="Altura" style="margin: 10px;"></a>
+                <a href="https://github.com/EdsonGP723"><img src="./Img/githubLogo.png" alt="Github" height="50px"
+                        width="Altura" style="margin: 10px;"></a>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid" style="margin-top: 350px;" id="About">
+        <hr class="border border-4">
+        <div class="row" style="margin-top: 100px;">
+            <div class="col-lg-4 col-12 text-center offset-lg-2 text-light" style="padding-top: 2%;">
+                <h2 class="display-2">Acerca de mí</h2>
+                <p class="fs-4">Experiencia en C# y Unity 2D y 3D, con iniciativa propia. Facilidad para el aprendizaje
+                    y para adaptarse a entornos nuevos. Actualmente estudiante de ingeniería en Desarrollo de Software y
+                    Videojuegos.</p>
+            </div>
+
+            <div class="col-lg-6 col-12">
+                <img src="./IMG/Unity.jpg" class="rounded mx-auto d-block" alt="UnityLogo" width="80%"
+                    height="Auto">
+            </div>
+        </div>
+
+    </div>
+    <div class="container-fluid" style="margin-top: 100px;">
+        <div class="row">
+            <div class="col-lg-6 col-12 text-light order-lg-1" style="padding-top: 2%; padding-right: 5%;">
+                <h2 class="display-2 text-center">Educación</h2>
+                <ul class="text-start">
+                    <li>
+                        <p class="fs-4"><b>Instituto Universitario Amerike</b></p>
+                        <p class="fs-4">Ingeniería en Desarrollo de Software interactivo y videojuegos</p>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="col-lg-6 col-12 order-lg-0">
+                <img src="./IMG/logo-amerike.png" class="rounded mx-auto d-block" alt="UnityLogo" width="80%" height="Auto">
+            </div>
+        </div>
+    </div>
+    <hr class="border border-4">
+    <div class="container-fluid" style="margin-top: 100px;" id="Experiencia">
+        <div class="text-center text-light">
+            <br>
+            <br>
+            <h2 class="display-2">Experiencia</h2>
+            <br><br><br>
+            <div class="row">
+                <div class="col-lg col-12" style="padding-right: 2%; padding-left: 2%;">
+                    <p class="fs-4"><b>DENEDIG S.A.S. de C.V.</b></p>
+                    <p class="fs-6">Agosto 2023 - Actualidad</p>
+                    <p class="fs-4">Actualmente estoy realizando prácticas en DENEDIG, participando en el desarrollo del
+                        proyecto "Línea del tiempo versión inventores mexicanos"</p>
+                    <img src="./IMG/Denedig.jpg" alt="DENEDIG" width="50%" height="auto">
                 </div>
             </div>
         </div>
-    </nav>
+    </div>
+    <hr class="border border-4">
+    <div class="container-fluid" style="margin-top: 100px;">
 
+        <h2 class="display-2 text-center text-light">Conocimientos</h2>
+        <br><br><br>
+        <div class="row">
+            <div class="col-lg-4 col-12 text-light">
+                <p class="display-6 text-center text-lg-end">Unity Editor</p>
+            </div>
+            <div class="col-lg-8 col-12 d-flex justify-content-center justify-content-lg-start">
+                <div class="progress w-75" role="progressbar" aria-label="Basic example" aria-valuenow="75"
+                    aria-valuemin="0" aria-valuemax="100" style="margin-top: 20px; background-color: rgb(10, 10, 10); ">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated"
+                        style="width: 75%; background-color: rgb(97, 96, 96)"></div>
+                </div>
+            </div>
 
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-lg-4 col-12 text-light">
+                <p class="display-6 text-center text-lg-end">C#</p>
+            </div>
+            <div class="col-lg-8 col-12 d-flex justify-content-center justify-content-lg-start">
+                <div class="progress w-75" role="progressbar" aria-label="Basic example" aria-valuenow="75"
+                    aria-valuemin="0" aria-valuemax="100" style="margin-top: 20px; background-color: rgb(10, 10, 10); ">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated"
+                        style="width: 50%; background-color: rgb(97, 96, 96)"></div>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-lg-4 col-12 text-light">
+                <p class="display-6 text-center text-lg-end">Animación</p>
+            </div>
+            <div class="col-lg-8 col-12 d-flex justify-content-center justify-content-lg-start">
+                <div class="progress w-75" role="progressbar" aria-label="Basic example" aria-valuenow="75"
+                    aria-valuemin="0" aria-valuemax="100" style="margin-top: 20px; background-color: rgb(10, 10, 10); ">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated"
+                        style="width: 50%; background-color: rgb(97, 96, 96)"></div>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-lg-4 col-12 text-light">
+                <p class="display-6 text-center text-lg-end">Blender Rigs</p>
+            </div>
+            <div class="col-lg-8 col-12 d-flex justify-content-center justify-content-lg-start">
+                <div class="progress w-75" role="progressbar" aria-label="Basic example" aria-valuenow="75"
+                    aria-valuemin="0" aria-valuemax="100" style="margin-top: 20px; background-color: rgb(10, 10, 10); ">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated"
+                        style="width: 50%; background-color: rgb(97, 96, 96)"></div>
+                </div>
+            </div>
+        </div>
+        <br>
+    </div>
+    <hr class="border border-4">
+    <div class="container-fluid" id="Proyectos" style="margin-top: 100px;">
+        <br><br>
+        <h2 class="display-2 text-center text-light" id="dice-space">Proyectos</h2>
+        <br><br><br>
+        <div class="text-center text-light display-5">Dice Space</div>
+        <br><br>
+        <div class="row">
+            <div class="col-lg col-12">
+            <br>
+                <div class="d-flex justify-content-center">
+                    <iframe frameborder="0" src="https://itch.io/embed/1618858?bg_color=000000&amp;fg_color=1b84ff&amp;link_color=4b4b4b" width="552" height="167"><a href="https://skullsociety.itch.io/dice-space">Dice Space by SkullSociety, Teseo723, OzcarDev</a></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid" style="margin-top: 100px;" id="10-seconds">
+        <br><br>
+        <div class="text-center text-light display-5">10 Seconds In The Moon</div>
+        <br><br>
+        <div class="row">
+            <div class="col-lg col-12">
+                <div class="d-flex justify-content-center">
+                    <iframe frameborder="0" src="https://itch.io/embed/2021034?bg_color=000000&amp;fg_color=ffffff&amp;link_color=0a0a0a" width="552" height="167"><a href="https://teseo723.itch.io/10-seconds-in-the-moon">10 Seconds In The Moon by Teseo723, SkullSociety</a></iframe>                
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <footer style="background-color: rgb(97, 96, 96);" id="Contacto">
+        <div class="container-fluid" style="margin-top: 100px; ">
+            <br><br>
+            <div class="row">
+                <div class="col-lg-4 col-12">
+                    <div class="text-lg-start text-center">
+                        <img src="./Img/ozcarDevBanner.png" alt="OzcarDev Banner" width="400px" height="auto"
+                            class="d-block mx-auto">
+                    </div>
+                </div>
 
+                <div class="col-lg-4 col-12 text-light">
+                <br>
+                    <p class="fs-3"><img src="./Img/PhoneIcon.png" alt="Phone" height="50px" width="Altura"
+                            style="margin: 10px;">5547796350</p>
+                    <br><br>
+                    <p class="fs-3"><img src="./Img/MailIcon.png" alt="Mail" height="50px" width="Altura"
+                            style="margin: 10px;">edsongp1007@outlook.com</p>
+                </div>
+                <div class="col-lg-4 col-12 d-flex justify-content-center" style="margin-top: 50px;">
+                    <a href="https://ozcardev.itch.io/"><img src="./Img/itchIcon.png" alt="Itch.io" height="50px"
+                            width="Altura" style="margin: 10px;"></a>
+                    <a href="https://github.com/OzcarDev"><img src="./Img/githubLogo.png" alt="Github" height="50px"
+                            width="Altura" style="margin: 10px;"></a>
+                </div>
+            </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <section id="Scripts">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-            crossorigin="anonymous"></script>
-    </section>
+        </div>
+    </footer>
 </body>
 
 </html>
