--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="./Img/RoundedIcon.png">
+    <link rel="icon" href="./IMG/Teseo.png">
+    <link rel="stylesheet" href="styles.css">
 
 
 
@@ -24,7 +24,7 @@
         <nav class="navbar navbar-expand-lg fixed-top" style="margin-top: -10px;">
             <div class="container-fluid" style="background-color: #474747;">
                 <a class="navbar-brand" href="#">
-                    <img src="./Img/RoundedIcon.png" alt="Logo" width="50" height="Auto"
+                    <img src="./IMG/Teseo.png" alt="Logo" width="50" height="Auto"
                         class="d-inline-block align-text-top">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -61,7 +61,7 @@
         </nav>
     </header>
 
-    <div class="container-fluid" style="margin-top: 20%;">
+    <div class="container-fluid" style="margin-top: 100px;">
 
         <div class="row">
 
@@ -72,15 +72,15 @@
             <div class="col-lg-6 col-12 text-light text-lg-start text-center" style="margin-top: 100px;">
                 <h1 class="display-1">Edson Gutierrez</h1>
                 <p class="fs-3">Desarrollador De Videojuegos</p>
-                <a href="https://teseo723.itch.io"><img src="./Img/itchIcon.png" alt="Itch.io" height="50px"
+                <a href="https://teseo723.itch.io"><img src="./IMG/ItchioBlanco.png" alt="Itch.io" height="50px"
                         width="Altura" style="margin: 10px;"></a>
-                <a href="https://github.com/EdsonGP723"><img src="./Img/githubLogo.png" alt="Github" height="50px"
+                <a href="https://github.com/EdsonGP723"><img src="./IMG/GitBlanco.png" alt="Github" height="80px"
                         width="Altura" style="margin: 10px;"></a>
             </div>
         </div>
     </div>
 
-    <div class="container-fluid" style="margin-top: 350px;" id="About">
+    <div class="container-fluid" style="margin-top: 150px;" id="About">
         <hr class="border border-4">
         <div class="row" style="margin-top: 100px;">
             <div class="col-lg-4 col-12 text-center offset-lg-2 text-light" style="padding-top: 2%;">
@@ -192,7 +192,7 @@
         <br>
     </div>
     <hr class="border border-4">
-    <div class="container-fluid" id="Proyectos" style="margin-top: 100px;">
+    <div class="container-fluid" id="Proyectos" style="margin-top: 50px;">
         <br><br>
         <h2 class="display-2 text-center text-light" id="dice-space">Proyectos</h2>
         <br><br><br>
@@ -224,27 +224,24 @@
         <div class="container-fluid" style="margin-top: 100px; ">
             <br><br>
             <div class="row">
-                <div class="col-lg-4 col-12">
+                <div class="col-lg-6 col-12">
                     <div class="text-lg-start text-center">
-                        <img src="./Img/ozcarDevBanner.png" alt="OzcarDev Banner" width="400px" height="auto"
-                            class="d-block mx-auto">
+                        <img src="./IMG/Kraken.png" alt="Edson" 
+                            class="d-block mx-auto Logo" >
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-12 text-light">
+                <div class="col-lg-6 col-12 text-light text-center">
                 <br>
-                    <p class="fs-3"><img src="./Img/PhoneIcon.png" alt="Phone" height="50px" width="Altura"
+                    <p class="fs-6"><img src="./IMG/Phone-removebg-preview.png" alt="Phone" height="50px" width="Altura"
                             style="margin: 10px;">5547796350</p>
-                    <br><br>
-                    <p class="fs-3"><img src="./Img/MailIcon.png" alt="Mail" height="50px" width="Altura"
+                    <p class="fs-6"><img src="./IMG/Mail-removebg-preview.png" alt="Mail" height="50px" width="Altura"
                             style="margin: 10px;">edsongp1007@outlook.com</p>
-                </div>
-                <div class="col-lg-4 col-12 d-flex justify-content-center" style="margin-top: 50px;">
-                    <a href="https://ozcardev.itch.io/"><img src="./Img/itchIcon.png" alt="Itch.io" height="50px"
-                            width="Altura" style="margin: 10px;"></a>
-                    <a href="https://github.com/OzcarDev"><img src="./Img/githubLogo.png" alt="Github" height="50px"
-                            width="Altura" style="margin: 10px;"></a>
-                </div>
+                            <a href="https://teseo723.itch.io/"><img src="./IMG/Itchio-removebg-preview.png" alt="Itch.io" height="50px"
+                                    width="Altura" style="margin: 10px;"></a>
+                            <a href="https://github.com/EdsonGP723"><img src="./IMG/github_PNG80.png" alt="Github" height="50px"
+                                    width="Altura" style="margin: 10px;"></a>
+                        </div>
             </div>
 
         </div>
