--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                             <ul class="dropdown-menu bg-dark">
                                 <li><a class="dropdown-item text-light bg-dark" href="#dice-space">Dice Space</a></li>
                                 <li><a class="dropdown-item text-light bg-dark" href="#10-seconds">10 Seconds In The Moon</a></li>
+                                <li><a class="dropdown-item text-light bg-dark" href="#VrHellsing">VRHellsing</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -66,7 +67,7 @@
         <div class="row">
 
             <div class="col-lg-6 col-12 ">
-                <img src="./IMG/Edson.jpg" class="mx-auto d-block"  alt="Edson"
+                <img src="./IMG/CVProf.jpg" class="mx-auto d-block"  alt="Edson"
                     height="Auto" width="60%">
             </div>
             <div class="col-lg-6 col-12 text-light text-lg-start text-center" style="margin-top: 100px;">
@@ -85,8 +86,8 @@
         <div class="row" style="margin-top: 100px;">
             <div class="col-lg-4 col-12 text-center offset-lg-2 text-light" style="padding-top: 2%;">
                 <h2 class="display-2">Acerca de mí</h2>
-                <p class="fs-4">Experiencia en C# y Unity 2D y 3D, con iniciativa propia. Facilidad para el aprendizaje
-                    y para adaptarse a entornos nuevos. Actualmente estudiante de ingeniería en Desarrollo de Software y
+                <p class="fs-4">Experiencia en C#, Unity 2D y 3D, riging y animación 3D en Blender. Cuento con gran iniciativa propia, facilidad para el aprendizaje
+                    y para adaptarme a entornos nuevos. Actualmente estudiante de ingeniería en Desarrollo de Software Interactivo y
                     Videojuegos.</p>
             </div>
 
@@ -97,7 +98,7 @@
         </div>
 
     </div>
-    <div class="container-fluid" style="margin-top: 100px;">
+    <div class="container-fluid" style="margin-top: auto;">
         <div class="row">
             <div class="col-lg-6 col-12 text-light order-lg-1" style="padding-top: 2%; padding-right: 5%;">
                 <h2 class="display-2 text-center">Educación</h2>
@@ -119,15 +120,16 @@
         <div class="text-center text-light">
             <br>
             <br>
-            <h2 class="display-2">Experiencia</h2>
-            <br><br><br>
+            <h2 class="display-2">Experiencia laboral</h2>
+            <br>
             <div class="row">
                 <div class="col-lg col-12" style="padding-right: 2%; padding-left: 2%;">
                     <p class="fs-4"><b>DENEDIG S.A.S. de C.V.</b></p>
-                    <p class="fs-6">Agosto 2023 - Actualidad</p>
-                    <p class="fs-4">Actualmente estoy realizando prácticas en DENEDIG, participando en el desarrollo del
-                        proyecto "Línea del tiempo versión inventores mexicanos"</p>
-                    <img src="./IMG/Denedig.jpg" alt="DENEDIG" width="50%" height="auto">
+                    <p class="fs-6">Agosto 2023 - Diciembre 2023</p>
+                    <p class="fs-4">Participé en el desarrollo del videojuego "Línea del tiempo versión inventores mexicanos"
+                        como parte de mis prácticas profesionales
+                    </p>
+                    <img src="./IMG/Denedig.jpg" alt="DENEDIG" width="25%" height="auto">
                 </div>
             </div>
         </div>
@@ -179,13 +181,13 @@
         <br>
         <div class="row">
             <div class="col-lg-4 col-12 text-light">
-                <p class="display-6 text-center text-lg-end">Blender Rigs</p>
+                <p class="display-6 text-center text-lg-end">Riging en Blender</p>
             </div>
             <div class="col-lg-8 col-12 d-flex justify-content-center justify-content-lg-start">
                 <div class="progress w-75" role="progressbar" aria-label="Basic example" aria-valuenow="75"
                     aria-valuemin="0" aria-valuemax="100" style="margin-top: 20px; background-color: rgb(10, 10, 10); ">
                     <div class="progress-bar progress-bar-striped progress-bar-animated"
-                        style="width: 50%; background-color: rgb(97, 96, 96)"></div>
+                        style="width: 75%; background-color: rgb(97, 96, 96)"></div>
                 </div>
             </div>
         </div>
@@ -215,6 +217,18 @@
             <div class="col-lg col-12">
                 <div class="d-flex justify-content-center">
                     <iframe frameborder="0" src="https://itch.io/embed/2021034?bg_color=000000&amp;fg_color=ffffff&amp;link_color=0a0a0a" width="552" height="167"><a href="https://teseo723.itch.io/10-seconds-in-the-moon">10 Seconds In The Moon by Teseo723, SkullSociety</a></iframe>                
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid" style="margin-top: 100px;" id="VrHellsing">
+        <br><br>
+        <div class="text-center text-light display-5">VRHellsing</div>
+        <br><br>
+        <div class="row">
+            <div class="col-lg col-12">
+                <div class="d-flex justify-content-center">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Yadiwh_cZRo?si=MBIRAw3LDGrVKGe9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                
                 </div>
             </div>
         </div>
