--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
             <div class="col-lg-6 col-12 text-light text-lg-start text-center" style="margin-top: 100px;">
                 <h1 class="display-1">Edson Gutierrez</h1>
                 <p class="fs-3">Desarrollador De Videojuegos</p>
+                <a href="./DOCS/CVEdsonGutierrez.pdf">CV</a>
+                <br>
                 <a href="https://teseo723.itch.io"><img src="./IMG/ItchioBlanco.png" alt="Itch.io" height="50px"
                         width="Altura" style="margin: 10px;"></a>
                 <a href="https://github.com/EdsonGP723"><img src="./IMG/GitBlanco.png" alt="Github" height="80px"
@@ -199,7 +201,9 @@
         <h2 class="display-2 text-center text-light" id="dice-space">Proyectos</h2>
         <br><br><br>
         <div class="text-center text-light display-5">Dice Space</div>
-        <br><br>
+        <br>
+        <div class="text-center text-light display-8">En éste proyecto participé generando el código de todo lo que involucra al jugador junto con la mecánica de dado</div>
+        <br>
         <div class="row">
             <div class="col-lg col-12">
             <br>
@@ -212,7 +216,9 @@
     <div class="container-fluid" style="margin-top: 100px;" id="10-seconds">
         <br><br>
         <div class="text-center text-light display-5">10 Seconds In The Moon</div>
-        <br><br>
+        <br>
+        <div class="text-center text-light display-8">En éste proyecto participé en el diseño y programación de 2 minijuegos que son el memorama y el campo de asteroides</div>
+        <br>
         <div class="row">
             <div class="col-lg col-12">
                 <div class="d-flex justify-content-center">
@@ -224,7 +230,9 @@
     <div class="container-fluid" style="margin-top: 100px;" id="VrHellsing">
         <br><br>
         <div class="text-center text-light display-5">VRHellsing</div>
-        <br><br>
+        <br>
+        <div class="text-center text-light display-8">En éste proyecto estoy participando haciendo el rig y animaciones de los personajes al igual que los props</div>
+        <br>
         <div class="row">
             <div class="col-lg col-12">
                 <div class="d-flex justify-content-center">
