--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         crossorigin="anonymous"></script>
     <header>
         <nav class="navbar navbar-expand-lg fixed-top" style="margin-top: -10px;">
-            <div class="container-fluid" style="background-color: #474747;">
+            <div class="container-fluid" style="background-color: #222020;">
                 <a class="navbar-brand" href="#">
                     <img src="./IMG/Teseo.png" alt="Logo" width="50" height="Auto"
                         class="d-inline-block align-text-top">
@@ -87,7 +87,7 @@
         <hr class="border border-4">
         <div class="row" style="margin-top: 100px;">
             <div class="col-lg-4 col-12 text-center offset-lg-2 text-light" style="padding-top: 2%;">
-                <h2 class="display-2">Acerca de mí</h2>
+                <h2 class="display-2"><b>Acerca de mí</b></h2>
                 <p class="fs-4">Experiencia en C#, Unity 2D y 3D, riging y animación 3D en Blender. Cuento con gran iniciativa propia, facilidad para el aprendizaje
                     y para adaptarme a entornos nuevos. Actualmente estudiante de ingeniería en Desarrollo de Software Interactivo y
                     Videojuegos.</p>
@@ -103,7 +103,7 @@
     <div class="container-fluid" style="margin-top: auto;">
         <div class="row">
             <div class="col-lg-6 col-12 text-light order-lg-1" style="padding-top: 2%; padding-right: 5%;">
-                <h2 class="display-2 text-center">Educación</h2>
+                <h2 class="display-2 text-center"><b>Educación</b></h2>
                 <ul class="text-start">
                     <li>
                         <p class="fs-4"><b>Instituto Universitario Amerike</b></p>
@@ -122,7 +122,7 @@
         <div class="text-center text-light">
             <br>
             <br>
-            <h2 class="display-2">Experiencia laboral</h2>
+            <h2 class="display-2"><b>Experiencia laboral</b></h2>
             <br>
             <div class="row">
                 <div class="col-lg col-12" style="padding-right: 2%; padding-left: 2%;">
@@ -139,7 +139,7 @@
     <hr class="border border-4">
     <div class="container-fluid" style="margin-top: 100px;">
 
-        <h2 class="display-2 text-center text-light">Conocimientos</h2>
+        <h2 class="display-2 text-center text-light"><b>Conocimientos</b></h2>
         <br><br><br>
         <div class="row">
             <div class="col-lg-4 col-12 text-light">
@@ -198,7 +198,7 @@
     <hr class="border border-4">
     <div class="container-fluid" id="Proyectos" style="margin-top: 50px;">
         <br><br>
-        <h2 class="display-2 text-center text-light" id="dice-space">Proyectos</h2>
+        <h2 class="display-2 text-center text-light" id="dice-space"><b>Proyectos</b></h2>
         <br><br><br>
         <div class="text-center text-light display-5">Dice Space</div>
         <br>
@@ -242,7 +242,7 @@
         </div>
     </div>
 
-    <footer style="background-color: rgb(97, 96, 96);" id="Contacto">
+    <footer style="background-color: #363636;" id="Contacto">
         <div class="container-fluid" style="margin-top: 100px; ">
             <br><br>
             <div class="row">
