--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active text-light" aria-current="page" href="#">Inicio</a>
+                            <a class="nav-link active text-light" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" href="#About">Acerca de mí</a>
+                            <a class="nav-link text-light" href="#About">Abot Me</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" href="#Experiencia">Experiencia</a>
+                            <a class="nav-link text-light" href="#Experiencia">Experience</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-light" href="#Proyectos" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">Proyectos</a>
+                                data-bs-toggle="dropdown" aria-expanded="false">Proyects</a>
                             <ul class="dropdown-menu bg-dark">
                                 <li><a class="dropdown-item text-light bg-dark" href="#dice-space">Dice Space</a></li>
                                 <li><a class="dropdown-item text-light bg-dark" href="#10-seconds">10 Seconds In The Moon</a></li>
@@ -53,7 +53,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" href="#Contacto">Contacto</a>
+                            <a class="nav-link text-light" href="#Contacto">Contact</a>
                         </li>
 
                     </ul>
@@ -72,7 +72,7 @@
             </div>
             <div class="col-lg-6 col-12 text-light text-lg-start text-center" style="margin-top: 100px;">
                 <h1 class="display-1">Edson Gutierrez</h1>
-                <p class="fs-3">Desarrollador De Videojuegos</p>
+                <p class="fs-3">Software Developer</p>
                 <a href="./DOCS/CVEdsonGutierrez.pdf">CV</a>
                 <br>
                 <a href="https://teseo723.itch.io"><img src="./IMG/ItchioBlanco.png" alt="Itch.io" height="50px"
@@ -87,10 +87,8 @@
         <hr class="border border-4">
         <div class="row" style="margin-top: 100px;">
             <div class="col-lg-4 col-12 text-center offset-lg-2 text-light" style="padding-top: 2%;">
-                <h2 class="display-2"><b>Acerca de mí</b></h2>
-                <p class="fs-4">Experiencia en C#, Unity 2D y 3D, riging y animación 3D en Blender. Cuento con gran iniciativa propia, facilidad para el aprendizaje
-                    y para adaptarme a entornos nuevos. Actualmente estudiante de ingeniería en Desarrollo de Software Interactivo y
-                    Videojuegos.</p>
+                <h2 class="display-2"><b>About Me</b></h2>
+                <p class="fs-4">I have experience with C#, HTLM, CSS, Unity 2D/3D, riging and 3D animation with Blender. </p>
             </div>
 
             <div class="col-lg-6 col-12">
@@ -103,11 +101,11 @@
     <div class="container-fluid" style="margin-top: auto;">
         <div class="row">
             <div class="col-lg-6 col-12 text-light order-lg-1" style="padding-top: 2%; padding-right: 5%;">
-                <h2 class="display-2 text-center"><b>Educación</b></h2>
+                <h2 class="display-2 text-center"><b>Education</b></h2>
                 <ul class="text-start">
                     <li>
                         <p class="fs-4"><b>Instituto Universitario Amerike</b></p>
-                        <p class="fs-4">Ingeniería en Desarrollo de Software interactivo y videojuegos</p>
+                        <p class="fs-4">Engineering student in interactive software and video game development</p>
                     </li>
                 </ul>
             </div>
@@ -122,15 +120,13 @@
         <div class="text-center text-light">
             <br>
             <br>
-            <h2 class="display-2"><b>Experiencia laboral</b></h2>
+            <h2 class="display-2"><b>Work Experience</b></h2>
             <br>
             <div class="row">
                 <div class="col-lg col-12" style="padding-right: 2%; padding-left: 2%;">
                     <p class="fs-4"><b>DENEDIG S.A.S. de C.V.</b></p>
-                    <p class="fs-6">Agosto 2023 - Diciembre 2023</p>
-                    <p class="fs-4">Participé en el desarrollo del videojuego "Línea del tiempo versión inventores mexicanos"
-                        como parte de mis prácticas profesionales
-                    </p>
+                    <p class="fs-6">August 2023 - December 2023</p>
+                    <p class="fs-4">I participated in the development of the video game "Línea del tiempo versión inventores mexicanos" as part of my professional internship.</p>
                     <img src="./IMG/Denedig.jpg" alt="DENEDIG" width="25%" height="auto">
                 </div>
             </div>
@@ -139,7 +135,7 @@
     <hr class="border border-4">
     <div class="container-fluid" style="margin-top: 100px;">
 
-        <h2 class="display-2 text-center text-light"><b>Conocimientos</b></h2>
+        <h2 class="display-2 text-center text-light"><b>Skills</b></h2>
         <br><br><br>
         <div class="row">
             <div class="col-lg-4 col-12 text-light">
@@ -170,7 +166,46 @@
         <br>
         <div class="row">
             <div class="col-lg-4 col-12 text-light">
-                <p class="display-6 text-center text-lg-end">Animación</p>
+                <p class="display-6 text-center text-lg-end">Animation</p>
+            </div>
+            <div class="col-lg-8 col-12 d-flex justify-content-center justify-content-lg-start">
+                <div class="progress w-75" role="progressbar" aria-label="Basic example" aria-valuenow="75"
+                    aria-valuemin="0" aria-valuemax="100" style="margin-top: 20px; background-color: rgb(10, 10, 10); ">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated"
+                        style="width: 35%; background-color: rgb(97, 96, 96)"></div>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-lg-4 col-12 text-light">
+                <p class="display-6 text-center text-lg-end">Riging on Blender</p>
+            </div>
+            <div class="col-lg-8 col-12 d-flex justify-content-center justify-content-lg-start">
+                <div class="progress w-75" role="progressbar" aria-label="Basic example" aria-valuenow="75"
+                    aria-valuemin="0" aria-valuemax="100" style="margin-top: 20px; background-color: rgb(10, 10, 10); ">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated"
+                        style="width: 70%; background-color: rgb(97, 96, 96)"></div>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-lg-4 col-12 text-light">
+                <p class="display-6 text-center text-lg-end">HTML</p>
+            </div>
+            <div class="col-lg-8 col-12 d-flex justify-content-center justify-content-lg-start">
+                <div class="progress w-75" role="progressbar" aria-label="Basic example" aria-valuenow="75"
+                    aria-valuemin="0" aria-valuemax="100" style="margin-top: 20px; background-color: rgb(10, 10, 10); ">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated"
+                        style="width: 60%; background-color: rgb(97, 96, 96)"></div>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-lg-4 col-12 text-light">
+                <p class="display-6 text-center text-lg-end">CSS</p>
             </div>
             <div class="col-lg-8 col-12 d-flex justify-content-center justify-content-lg-start">
                 <div class="progress w-75" role="progressbar" aria-label="Basic example" aria-valuenow="75"
@@ -181,28 +216,15 @@
             </div>
         </div>
         <br>
-        <div class="row">
-            <div class="col-lg-4 col-12 text-light">
-                <p class="display-6 text-center text-lg-end">Riging en Blender</p>
-            </div>
-            <div class="col-lg-8 col-12 d-flex justify-content-center justify-content-lg-start">
-                <div class="progress w-75" role="progressbar" aria-label="Basic example" aria-valuenow="75"
-                    aria-valuemin="0" aria-valuemax="100" style="margin-top: 20px; background-color: rgb(10, 10, 10); ">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated"
-                        style="width: 75%; background-color: rgb(97, 96, 96)"></div>
-                </div>
-            </div>
-        </div>
-        <br>
     </div>
     <hr class="border border-4">
     <div class="container-fluid" id="Proyectos" style="margin-top: 50px;">
         <br><br>
-        <h2 class="display-2 text-center text-light" id="dice-space"><b>Proyectos</b></h2>
+        <h2 class="display-2 text-center text-light" id="dice-space"><b>Projects</b></h2>
         <br><br><br>
         <div class="text-center text-light display-5">Dice Space</div>
         <br>
-        <div class="text-center text-light display-8">En éste proyecto participé generando el código de todo lo que involucra al jugador junto con la mecánica de dado</div>
+        <div class="text-center text-light display-8">In this project, I participated making the code about everything that involves the player and the dice mechanic</div>
         <br>
         <div class="row">
             <div class="col-lg col-12">
@@ -217,7 +239,7 @@
         <br><br>
         <div class="text-center text-light display-5">10 Seconds In The Moon</div>
         <br>
-        <div class="text-center text-light display-8">En éste proyecto participé en el diseño y programación de 2 minijuegos que son el memorama y el campo de asteroides</div>
+        <div class="text-center text-light display-8">In this project, i participated designign and programing 2 of the 4 levels. The memorama and the asteroids level.</div>
         <br>
         <div class="row">
             <div class="col-lg col-12">
@@ -231,7 +253,7 @@
         <br><br>
         <div class="text-center text-light display-5">VRHellsing</div>
         <br>
-        <div class="text-center text-light display-8">En éste proyecto estoy participando haciendo el rig y animaciones de los personajes al igual que los props</div>
+        <div class="text-center text-light display-8">In this project I'm still participating doing the rigging and animations of the enemies and props.</div>
         <br>
         <div class="row">
             <div class="col-lg col-12">
