--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="col-lg-6 col-12 text-light text-lg-start text-center" style="margin-top: 100px;">
                 <h1 class="display-1">Edson Gutierrez</h1>
                 <p class="fs-3">Software Developer</p>
-                <a href="./DOCS/CVEdsonGutierrez.pdf">CV</a>
+                <a href="./DOCS/CVEdsonGutierrez.pdf" style="font-size: 150%;">CV</a>
                 <br>
                 <a href="https://teseo723.itch.io"><img src="./IMG/ItchioBlanco.png" alt="Itch.io" height="50px"
                         width="Altura" style="margin: 10px;"></a>
@@ -88,7 +88,8 @@
         <div class="row" style="margin-top: 100px;">
             <div class="col-lg-4 col-12 text-center offset-lg-2 text-light" style="padding-top: 2%;">
                 <h2 class="display-2"><b>About Me</b></h2>
-                <p class="fs-4">I have experience with C#, HTLM, CSS, Unity 2D/3D, riging and 3D animation with Blender. </p>
+                <p class="fs-4">I have experience with C#, HTLM, CSS, Unity 2D/3D, riging and 3D animation with Blender.</p>
+                <p class="fs-4">I am passionate about video games and I hope my work can inspire more people to follow the video game development in any way.</p>
             </div>
 
             <div class="col-lg-6 col-12">
