Actualizando página y cv

--- a/index.html
+++ b/index.html
@@ -254,12 +254,12 @@
         <br><br>
         <div class="text-center text-light display-5">VRHellsing</div>
         <br>
-        <div class="text-center text-light display-8">In this project I'm still participating doing the rigging and animations of the enemies and props.</div>
+        <div class="text-center text-light display-8">In this project I'm still participating doing the rigging, posing and animations of the enemies and props.</div>
         <br>
         <div class="row">
             <div class="col-lg col-12">
                 <div class="d-flex justify-content-center">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Yadiwh_cZRo?si=MBIRAw3LDGrVKGe9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                
+                    <iframe src="https://store.steampowered.com/widget/3540160/" frameborder="0" width="646" height="190"></iframe>               
                 </div>
             </div>
         </div>
