--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     </div>
     <div class="container-fluid" style="margin-top: 100px;" id="VrHellsing">
         <br><br>
-        <div class="text-center text-light display-5">VRHellsing</div>
+        <div class="text-center text-light display-5">VR Helsing</div>
         <br>
         <div class="text-center text-light display-8">In this project I'm still participating doing the rigging, posing and animations of the enemies and props.</div>
         <br>
