Actualizando index y CV

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                                 data-bs-toggle="dropdown" aria-expanded="false">Proyects</a>
                             <ul class="dropdown-menu bg-dark">
                                 <li><a class="dropdown-item text-light bg-dark" href="#dice-space">Dice Space</a></li>
-                                <li><a class="dropdown-item text-light bg-dark" href="#10-seconds">10 Seconds In The Moon</a></li>
-                                <li><a class="dropdown-item text-light bg-dark" href="#VrHellsing">VRHellsing</a></li>
+                                <li><a class="dropdown-item text-light bg-dark" href="#supervivencia">Lección de supervivencia</a></li>
+                                <li><a class="dropdown-item text-light bg-dark" href="#VrHellsing">VR Helsing</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -236,16 +236,16 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid" style="margin-top: 100px;" id="10-seconds">
+    <div class="container-fluid" style="margin-top: 100px;" id="supervivencia">
         <br><br>
-        <div class="text-center text-light display-5">10 Seconds In The Moon</div>
+        <div class="text-center text-light display-5">Lección de supervivencia</div>
         <br>
-        <div class="text-center text-light display-8">In this project, i participated designign and programing 2 of the 4 levels. The memorama and the asteroids level.</div>
+        <div class="text-center text-light display-8">In this project, i participated making the rig, animations and cinematics with timeline and cinemachine.</div>
         <br>
         <div class="row">
             <div class="col-lg col-12">
                 <div class="d-flex justify-content-center">
-                    <iframe frameborder="0" src="https://itch.io/embed/2021034?bg_color=000000&amp;fg_color=ffffff&amp;link_color=0a0a0a" width="552" height="167"><a href="https://teseo723.itch.io/10-seconds-in-the-moon">10 Seconds In The Moon by Teseo723, SkullSociety</a></iframe>                
+                    <iframe frameborder="0" src="https://itch.io/embed/3160164?bg_color=000000&amp;fg_color=eeeeee&amp;link_color=4b4b4b&amp;border_color=302f2f" width="552" height="167"><a href="https://phantom-code.itch.io/leccin-de-supervivencia">Lección de supervivencia by Phantom Code</a></iframe>                
                 </div>
             </div>
         </div>
@@ -260,6 +260,10 @@
             <div class="col-lg col-12">
                 <div class="d-flex justify-content-center">
                     <iframe src="https://store.steampowered.com/widget/3540160/" frameborder="0" width="646" height="190"></iframe>               
+                </div>
+                <br>
+                <div class="d-flex justify-content-center">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Yadiwh_cZRo?si=9jUTE3oQRTuny-Pu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                
                 </div>
             </div>
         </div>
